Sistema de criptografia de pacotes completo com UI de controle
- Implementado PacketCrypto.cs com algoritmo XOR personalizado
- Guilmon.cpp com criptografia integrada e console debug
- Correções de compatibilidade .NET Core (BeginInvoke → Task.Run)
- CryptoManager para controle centralizado da criptografia
- Checkboxes de criptografia em todos os servidores (Auth, Digital World, Lobby)
- Correções de buffer overflow no Socket.cs
- Algoritmo de descriptografia corrigido (processamento backward)
- Todos os logs usando MultiLogger.LogServer
- Correção do método Send para criptografar IPacket
- Proteção contra NullReferenceException nos event handlers XAML

--- a/src/Server/Digital World/Digital World.csproj
+++ b/src/Server/Digital World/Digital World.csproj
@@ -13,6 +13,7 @@
     <Configurations>Debug;Release;Complete</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Deterministic>false</Deterministic>
+    <NoWarn>$(NoWarn);CS8600;CS8601;CS8602;CS8603;CS8604;CS8618;CS8622;CS8625;CS8629</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
