--- a/src/Server/Yggdrasil/Yggdrasil.csproj
+++ b/src/Server/Yggdrasil/Yggdrasil.csproj
@@ -13,7 +13,7 @@
     <Configurations>Debug;Release;Complete</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Deterministic>false</Deterministic>
-    <NoWarn>$(NoWarn);SYSLIB0011;SYSLIB0006;SYSLIB0021</NoWarn>
+    <NoWarn>$(NoWarn);SYSLIB0011;SYSLIB0006;SYSLIB0021;SYSLIB0057;CS8600;CS8601;CS8602;CS8603;CS8604;CS8618;CS8619;CS8622;CS8625;CS8629;CS4014</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
